# melomanix

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md
.claude/hooks/: session-start.sh
.github/workflows/: build.yml  release.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/engine/: GraphEngine.cpp  GraphEngine.h  GraphTypes.cpp  GraphTypes.h  HostedPlugin.cpp  HostedPlugin.h  Nodes.cpp  Nodes.h  Transport.h
src/model/: GraphModel.cpp  GraphModel.h
src/ui/: GraphCanvas.cpp  GraphCanvas.h  MacroStrip.h  MatrixPane.h  NodeComponent.cpp  NodeComponent.h  PaletteEditor.h  Selection.h  Theme.h  TimelinePane.h
test/: EngineTests.cpp
